# merge_code

./: .gitignore  .merge_code.json  GO_SUPPORT.md  INSTALL.md  LICENSE  README.md  USAGE.md  go_test_with_start.txt  mixed_languages_test.txt  out.txt  pip_test_output.txt  pyproject.toml  requirements.txt  run_merge_code.bat  run_merge_code.py  setup.py  test_output.txt
src/merge_code/: __main__.py  main.py
test/: test_main.py
test_go/: main.go  utils.go
